# EduCoder

./: .gitignore  CLAUDE.md  PROGRESS.md  Project.md  README.md  pyproject.toml
educoder/: __init__.py  cli.py  context_manager.py  evaluator.py  memory.py  metrics.py  models.py  pii_filter.py  runtime.py  sandbox.py  teacher.py  tools.py  trace_db.py  workspace.py
scripts/: collect_resume_metrics.py  run_large_scale_experiments.py  run_provider_experiments.py
tests/: test_context_manager.py  test_evaluator.py  test_memory.py  test_modes.py  test_pico.py  test_run_store.py  test_safety_invariants.py  test_task_state.py
