[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "educoder"
version = "0.1.0"
description = "Small local coding agent for Ollama and OpenAI-compatible models"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
student = ["docker>=7.0"]
teacher = ["rich>=13.0"]
edu = ["docker>=7.0", "rich>=13.0"]

[project.scripts]
educoder = "educoder.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools]
packages = ["educoder"]
